# axora

./: .gitignore  Cargo.toml
config/: default.toml
migrations/: 001_create_tables.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/aggregation/: engine.rs
src/api/: router.rs
src/api/handlers/: feeds.rs  mod.rs
src/domain/: data_point.rs  feed.rs  mod.rs
src/sources/: coingecko.rs  mod.rs  traits.rs
src/state/: feed_manager.rs  mod.rs
src/storage/: postgres.rs
