[package]
name = "axora"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "json", "migrate", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
